# HAM10K

./: README.md  app.py  create_samples.py  main.py  pyproject.toml  requirements.txt
model_saved/: fingerprint.pb  saved_model.pb
model_saved/variables/: variables.index
templates/: index.html
