[project]
name = "ham10k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.1",
    "fastapi>=0.117.1",
    "fpdf2>=2.8.4",
    "ipython>=9.5.0",
    "jinja2>=3.1.6",
    "keras>=3.11.3",
    "lime>=0.2.0.1",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.37.0",
]
